--- a/1-PSU/STM32/PSU_L051C8T6.ioc
+++ b/1-PSU/STM32/PSU_L051C8T6.ioc
@@ -20,27 +20,31 @@ Mcu.Name=STM32L051C(6-8)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB11
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB6
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=PB12
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PB15
+Mcu.Pin19=PA9
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB10
-Mcu.PinsNb=22
+Mcu.Pin20=PA10
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin3=PA0
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L051C8Tx
@@ -52,6 +56,14 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=ROUTE_A0
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=ROUTE_A1
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
@@ -72,6 +84,14 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=TX_EN
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=IAM_ALIVE
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.Mode=Asynchronous
 PB10.Signal=LPUART1_TX
 PB11.Mode=Asynchronous
@@ -86,6 +106,8 @@ PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Pu
+PB7.GPIO_Pu=GPIO_NOPULL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -125,7 +147,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.AHBFreq_Value=2097000
 RCC.APB1Freq_Value=2097000
 RCC.APB1TimFreq_Value=2097000
@@ -169,4 +191,4 @@ USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
-isbadioc=false
+isbadioc=true
