--- a/1-PSU/STM32/PSU_L051C8T6.ioc
+++ b/1-PSU/STM32/PSU_L051C8T6.ioc
@@ -7,6 +7,9 @@ GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x00707CBB
 KeepUserPlacement=false
+LPUART1.BaudRate=1000000
+LPUART1.IPParameters=BaudRate,WordLength
+LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32L051C8T6
 Mcu.Family=STM32L0
 Mcu.IP0=I2C1
