TX_EN keeps HIGH to turn off TX Power at Initial Stage.

--- a/1-PSU/STM32/PSU_L051C8T6.ioc
+++ b/1-PSU/STM32/PSU_L051C8T6.ioc
@@ -91,9 +91,10 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label
+PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=TX_EN
 PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=IAM_ALIVE
