--- a/1-PSU/STM32/PSU_L051C8T6.ioc
+++ b/1-PSU/STM32/PSU_L051C8T6.ioc
@@ -7,8 +7,9 @@ GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x00707CBB
 KeepUserPlacement=false
-LPUART1.BaudRate=1000000
-LPUART1.IPParameters=BaudRate,WordLength
+LPUART1.BaudRate=2000000
+LPUART1.IPParameters=BaudRate,WordLength,StopBits
+LPUART1.StopBits=UART_STOPBITS_1
 LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32L051C8T6
 Mcu.Family=STM32L0
@@ -19,9 +20,10 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP7=TIM6
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32L051C(6-8)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
@@ -43,6 +45,7 @@ Mcu.Pin22=PA14
 Mcu.Pin23=PB6
 Mcu.Pin24=PB7
 Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PA0
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -50,7 +53,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L051C8Tx
@@ -58,6 +61,7 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.LPUART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -189,27 +193,32 @@ RCC.USART2Freq_Value=32000000
 RCC.VCOInputFreq_Value=32000000
 RCC.VCOOutputFreq_Value=96000000
 RCC.WatchDogFreq_Value=37000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 SPI2.CLKPhase=SPI_PHASE_1EDGE
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
-SPI2.CalculateBaudRate=125.0 KBits/s
+SPI2.CalculateBaudRate=250.0 KBits/s
 SPI2.DataSize=SPI_DATASIZE_16BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,TIMode,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.TIMode=SPI_TIMODE_DISABLE
 SPI2.VirtualType=VM_MASTER
+TIM6.IPParameters=Prescaler
+TIM6.Prescaler=32-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 isbadioc=false
