--- a/1-PSU/STM32/PSU_L051C8T6.ioc
+++ b/1-PSU/STM32/PSU_L051C8T6.ioc
@@ -3,27 +3,24 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
-I2C1.Timing=0x00707CBB
+GPIO.groupedBy=Show All
 KeepUserPlacement=false
-LPUART1.BaudRate=2000000
+LPUART1.BaudRate=4000000
 LPUART1.IPParameters=BaudRate,WordLength,StopBits
 LPUART1.StopBits=UART_STOPBITS_1
 LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32L051C8T6
 Mcu.Family=STM32L0
-Mcu.IP0=I2C1
-Mcu.IP1=LPUART1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=TIM6
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP0=LPUART1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=TIM6
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32L051C(6-8)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
@@ -37,12 +34,12 @@ Mcu.Pin15=PB12
 Mcu.Pin16=PB13
 Mcu.Pin17=PB14
 Mcu.Pin18=PB15
-Mcu.Pin19=PA9
+Mcu.Pin19=PA8
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PA10
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PB6
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
 Mcu.Pin24=PB7
 Mcu.Pin25=VP_SYS_VS_Systick
 Mcu.Pin26=VP_TIM6_VS_ClockSourceINT
@@ -57,8 +54,8 @@ Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L051C8Tx
-MxCube.Version=6.10.0
-MxDb.Version=DB.6.0.100
+MxCube.Version=6.11.1
+MxDb.Version=DB.6.0.111
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.LPUART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -67,12 +64,16 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
-PA0.GPIOParameters=GPIO_Label
+PA0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA0.GPIO_Label=ROUTE_A0
+PA0.GPIO_PuPd=GPIO_PULLUP
+PA0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA0.Locked=true
 PA0.Signal=GPIO_Output
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=ROUTE_A1
+PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
@@ -93,23 +94,31 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.Mode=Clock-out
+PA8.Signal=RCC_MCO
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=PinState,GPIO_Label
+PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PB0.GPIO_Label=TX_EN
+PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB0.Locked=true
 PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=IAM_ALIVE
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.Mode=Asynchronous
 PB10.Signal=LPUART1_TX
 PB11.Mode=Asynchronous
 PB11.Signal=LPUART1_RX
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=ADC_CNV
+PB12.GPIO_PuPd=GPIO_PULLUP
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.Mode=Full_Duplex_Master
@@ -118,12 +127,13 @@ PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.GPIOParameters=GPIO_Pu
-PB7.GPIO_Pu=GPIO_NOPULL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_FM7
+PB7.GPIO_FM7=__NULL
+PB7.GPIO_Label=TEST_SIG
+PB7.GPIO_PuPd=GPIO_NOPULL
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -161,7 +171,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
@@ -174,13 +184,15 @@ RCC.HSE_VALUE=32000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=32000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLDIV,PLLMUL,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LPTIMFreq_Value=32000000
 RCC.LPUARTFreq_Value=32000000
 RCC.LSI_VALUE=37000
 RCC.MCOPinFreq_Value=32000000
 RCC.MSI_VALUE=2097000
-RCC.PLLCLKFreq_Value=48000000
+RCC.PLLCLKFreq_Value=64000000
+RCC.PLLDIV=RCC_PLLDIV_3
+RCC.PLLMUL=RCC_PLLMUL_6
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=16000000
@@ -191,7 +203,7 @@ RCC.TimerFreq_Value=32000000
 RCC.USART1Freq_Value=32000000
 RCC.USART2Freq_Value=32000000
 RCC.VCOInputFreq_Value=32000000
-RCC.VCOOutputFreq_Value=96000000
+RCC.VCOOutputFreq_Value=192000000
 RCC.WatchDogFreq_Value=37000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=16.0 MBits/s
@@ -200,18 +212,21 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRa
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI2.CLKPhase=SPI_PHASE_1EDGE
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
-SPI2.CalculateBaudRate=250.0 KBits/s
+SPI2.CalculateBaudRate=2.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_16BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,TIMode,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.TIMode=SPI_TIMODE_DISABLE
 SPI2.VirtualType=VM_MASTER
-TIM6.IPParameters=Prescaler
-TIM6.Prescaler=32-1
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM6.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
+TIM6.Period=1
+TIM6.Prescaler=4-1
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
